# spd

./: .gitignore  .mcp.json  2025-12-08-could-you-have-a-play-with-the-dataset-lennart-fin.txt  5q_config_modified.yaml  5q_magnitude_sweep_config.yaml  ALL_MODELS_EVAL_README.md  ALPHA_EFFECT.md  ALPHA_EXAMPLES.md  CLAUDE.md  CLAUDE_CHECKLIST.md  CLAUDE_COMPREHENSIVE.md  COSINE_SWEEP_README.md  IMPLEMENTATION_LOG.md  MODEL_DEMO_README.md  Makefile  NODE_TEST_README.md  PLAN.md  PROMPT.md  PR_342_IMPROVEMENTS.md  PR_DESCRIPTION.md  QUICK_NODE_TEST.md  README.md  REFACTOR.md  REFACTOR_PLAN.md  SHAPE_PLAN.md  SIMPLESTORIES_README.md  SIMPLE_STORIES_TRAIN_FIX.md  SPEEDUPS.md  STYLE.md  TASKS-claude-1.md  TASKS-claude-2.md  TASKS-claude-3.md  TASKS-claude-4.md  TODO-multibatch.md  TODO.md  UNCERTAINTIES.md  analysis.txt  analysis_result.txt  analysis_results.txt  analyze_crashed_runs.py  (+119 more)
.circuits-ref/: .gitignore  ARTIFACTS.md  EXPERIMENT_LOG.md  README.md  db.md  pyproject.toml
.circuits-ref/circuits/: __init__.py  aggregation.py  analysis.py  async_analysis.py  autointerp.py  batch_relp.py  cli.py  clustering.py  connectivity.py  database.py  hooks.py  labeling.py  model_configs.py  pipeline.py  relp.py  schemas.py
.circuits-ref/configs/: bfcl_date_contrastive.yaml  bfcl_date_top5.yaml  discovery_graphs.yaml  factor_sensitivity.yaml  grant_contrastive.yaml  grant_funding.yaml  grant_funding_v2.yaml  helios_contrastive.yaml  helios_investment.yaml  helios_no.yaml  helios_short.yaml  helios_yes.yaml  knowledge_circuits.yaml  landmark_base.yaml  landmark_sft.yaml  medical_prompts.yaml  reasoning_conditional_group.yaml  reasoning_factual_category.yaml  reasoning_negation_group.yaml  reasoning_novel_composition.yaml  reasoning_set_logic_group.yaml  reasoning_test.yaml  reasoning_transitivity.yaml  reasoning_transitivity_group.yaml  rome_circuit.yaml  rome_circuit_qwen.yaml  sft_agent_a_output_only.yaml  sft_agent_a_v2.yaml  sft_agent_b_graph_informed.yaml  sft_agent_b_v2.yaml  sft_control_insulin.yaml  sft_control_renin_noBP.yaml  sft_egg_agent_a.yaml  sft_egg_agent_a_v2.yaml  sft_egg_agent_b.yaml  sft_opioid_v1_constipation_general.yaml  sft_raas_correction.yaml  sft_raas_v2.yaml  sft_raas_v3_intermediate.yaml  sft_raas_v4_aldosterone_general.yaml  (+11 more)
.circuits-ref/docs/: AGENTIC_NEURAL_AUTOINTERP.md  AUTOINTERP_PIPELINE.md  DASHBOARD_AGENT.md  NEURON_ANALYSIS_GUIDE.md  NEURON_SCIENTIST.md  NEURON_SCIENTIST_PROMPT.md  NEURON_SCIENTIST_PROMPT_V2.md  PROGRESSIVE_INTERPRETATION.md  compositional_labeling.md  direct_indirect_effects.md  direct_indirect_effects_v2.md  example_labeling_prompt.md  experiment_aldosterone_correction.md  experiment_graph_informed_sft.md  experiment_twohop_pattern_transfer.md  intermediate_concept_sft_pipeline.md  labeling_prompts_v2.md  manual_labeling_test_cases.md  neurondb-setup.md  prompt_design_spec.md
.circuits-ref/frontend/: circuit_viewer.html  cluster_viewer.html  dashboard_v2_index.html  diff_viewer.html  flow_viewer.html  index.html  module_viewer.html  neuron_viewer.html  util.js  verification_log_viewer.html
.circuits-ref/frontend/attribution_graph/: cg.css  init-cg-feature-detail.js  init-cg-link-graph.js  init-cg-subgraph.js
.circuits-ref/frontend/data/: graph-metadata.json
.circuits-ref/neuron_scientist/: __init__.py  agent.py  dashboard_agent.py  dashboard_agent_v2.py  figure_tools.py  graph_index.py  html_builder.py  html_template.py  pi_agent.py  prompts.py  review_prompts.py  schemas.py  skeptic_agent.py  tools.py
.circuits-ref/schemas/: experiments.py
.circuits-ref/scripts/data/: aggregate_edge_stats.py  build_llama8b_duckdb.py  build_neuron_index.py  build_neuron_profile.py  build_olmo3_duckdb.py  build_tiered_atlas.py  consolidate_neuron_reports.py  distill_for_review.py  extract_findings_batch.py  generate_neuron_dashboard.py  generate_neuron_index.py  parallel_edge_aggregation.py  select_interesting_neurons.py
.circuits-ref/scripts/experiments/: activation_fingerprint_eval.py  archive_stale_data.py  batched_experiments.py  causal_verification_worker.py  cleanup_agent_sessions.py  compute_der_batch.py  compute_direct_indirect.py  compute_input_projections.py  compute_projections_batch.py  evaluate_sft_comparison.py  evaluate_sft_v2.py  filter_medical_abbreviated.py  filter_wrong_predictions.py  find_twohop_errors.py  generate_baseline_random_positions.py  (+18 more)
.circuits-ref/slurm/: __init__.py  aggregator.py  manifest.py  monitor.py  submit_batch.py  worker.py
.circuits-ref/tests/: conftest.py  test_circuits_schemas.py  test_confidence_adjustment.py  test_data_flow.py  test_hypothesis_lifecycle.py  test_investigation_quality.py  test_pi_integration.py  test_pipeline_data_flow.py  test_prompts.py  test_protocol_gating.py  test_relp_pipeline.py  test_schemas.py  test_tool_edge_cases.py  test_tools_gpu.py  test_tools_pure.py
(+1912 files in other folders)
